--- a/1.ders/index.html
+++ b/1.ders/index.html
@@ -40,9 +40,9 @@
     </script>
     <script src="javascript.js"></script>
     <script>
-        // console.log(5 + 4)
-        // alert(5 + 5)
-        // document.write(5 + 7)
+        console.log(5 + 4)
+        alert(5 + 5)
+        document.write(5 + 7)
     </script>
 </body>
 </html>
