--- a/1.ders/index.html
+++ b/1.ders/index.html
@@ -11,6 +11,9 @@
     </script>
 </head>
 <body>
+    <script src="myScript.js"></script>
+</body>
+<body>
     <h2>Javascript ile neler yapılabilir ?</h2>
 
     <p id="demo">HTML içeriğini değiştirebilir.</p>
